--- a/app/src/styles/container.module.css
+++ b/app/src/styles/container.module.css
@@ -57,56 +57,14 @@ h1 {
   line-height: 2;
   font-size: 19px;
 }
+
+h2{
+  font-size: 12px;
+  font-weight: 100;
+  color: #9da7bf;
+}
 p {
   color: rgba(177, 177, 177, 0.527);
   line-height: 1.5;
   font-size: 14px;
-}
-
-.containerButton {
-  border: 1px solid rgba(77, 6, 255, 0.212);
-  border-radius: 30px;
-
-  width: fit-content;
-  height: 48px;
-
-  display: flex;
-
-  background-color: rgba(0, 0, 0, 0.131);
-
-  box-shadow: inset 0 0 9px #000, 0 0 12px rgba(102, 100, 205, 0.189);
-
-  position: relative;
-
-  margin: 15px;
-
-  align-self: flex-start;
-}
-.containerButton button {
-  width: 40px;
-  height: 40px;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  margin: 3px;
-  border: none;
-  background-color: transparent;
-
-  background: linear-gradient(30deg, #16264a, #9924ff);
-  color: #fff;
-
-  box-shadow: inset 0 0 7px #000;
-  cursor: pointer;
-
-  border-radius: 30px;
-}
-.containerButton button:hover {
-  background: linear-gradient(30deg, #162342, #741ac2);
-  box-shadow: inset 0 0 4px rgba(4, 14, 29, 0.976);
-}
-.containerButton button:active {
-  background: linear-gradient(30deg, rgb(5, 20, 51), #4a2669);
-  box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.976);
 }
